<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:clickable="false">


    <!-- Button zum Speichern der Notiz auf dem Geraet -->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmdAddMenueNew"
        android:textAllCaps="false"
        android:id="@+id/cmdAddMenueNew"
        android:onClick="menueHinzufuegen"/>


    <!-- Textfeld für den Dateinamen -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:id="@+id/photo"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/platzhalter_photo" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmdAddPhoto"
            android:id="@+id/cmdAddPhoto"
            android:layout_alignParentTop="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:onClick="machEinMenuePhoto"
            android:drawableStart="@drawable/ic_photo_camera_black_18dp"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvMenueName"
        android:id="@+id/txtvMenueName"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtInputMenueName"
        android:hint="@string/txtInputMenueName" />

    <!-- RadioGroup zum Gruppieren der Radiobuttons -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvDateOfAdding"
        android:id="@+id/txtvDateOfAdding"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/txtCurrentDate"
        android:hint="@string/txtCurrentDate"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvTyp"
        android:id="@+id/txtvTyp"
        android:gravity="center" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdbGrpTyp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbBreakfast"
            android:id="@+id/rdbBreakfast"
            android:checked="true"
            android:focusableInTouchMode="true" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbLunch"
            android:id="@+id/rdbLunch"
            android:layout_gravity="center_horizontal"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbEvening"
            android:text="@string/rdbEvening" />

    </RadioGroup>

    <!-- Textfeld für den Notiztext -->
    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvZutaten"
        android:id="@+id/txtvZutaten"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtWert"
            android:hint="@string/txtAnzahl"
            android:layout_weight="0.5"
            android:inputType="numberDecimal" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/zutatenSpinner"
            android:layout_weight="0.5"
            android:layout_toRightOf="@+id/txtWert"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtZutaten"
            android:hint="@string/txtZutaten"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtvDescription"
        android:id="@+id/txtvDescription"
        android:gravity="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="89dp"
        android:id="@+id/txtDescription"
        android:hint="@string/txtDescription" />
</LinearLayout>
