<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:weightSum="1">

    <!-- Button zum Speichern der Notiz auf dem Geraet -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="33dp"
        android:text="@string/txtvEditModus"
        android:id="@+id/txtvEditModus"
        android:background="#FF0000"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:gravity="center"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cmdShowEk"
        android:textAllCaps="false"
        android:text="@string/cmdShowEk"
        android:drawableTop="@drawable/list"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="278dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_weight="0.91">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="180dp"
                        android:layout_height="120dp"
                        android:id="@+id/EditImageView"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="false"
                        android:src="@drawable/platzhalter_photo" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtvMenueName"
                    android:id="@+id/txtvMenueName"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEditInputMenueName"
                    android:hint="@string/txtInputMenueName"
                    android:textSize="18sp"
                    android:textColor="#800000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtvDateOfAdding"
                    android:id="@+id/txtvDateOfAdding"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/txtEditCurrentDate"
                    android:hint="@string/txtCurrentDate"
                    android:gravity="center"
                    android:textColor="#800000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtvTyp"
                    android:id="@+id/txtvTyp"
                    android:gravity="center" />

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdbGrpEditTyp"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:enabled= "false">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rdbBreakfast"
                        android:id="@+id/rdbEditBreakfast"
                        android:checked="false"
                        android:focusableInTouchMode="false"
                        android:enabled= "false" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rdbLunch"
                        android:id="@+id/rdbEditLunch"
                        android:layout_gravity="center_horizontal"
                        android:enabled= "false" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rdbEditEvening"
                        android:text="@string/rdbEvening"
                        android:longClickable="false"
                        android:enabled= "false" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtvZutaten"
                    android:id="@+id/txtvZutaten"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEditZutaten"
                    android:hint="@string/txtZutaten"
                    android:textSize="18sp"
                    android:textColor="#800000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAnzahlVorhanden"
                    android:background="#F0F0F5"
                    android:hint="@string/txtAnzahlVorhanden"
                    android:layout_gravity="right" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtvDescription"
                    android:id="@+id/txtvDescription"
                    android:gravity="center" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="89dp"
                    android:id="@+id/txtEditDescription"
                    android:hint="@string/txtDescription"
                    android:linksClickable="false"
                    android:textColor="#800000"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cmdDeleteThisMenue"
        android:id="@+id/cmdDeleteThisMenue"
        android:layout_gravity="center_horizontal" />

</LinearLayout>