<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_new_menue"
            android:icon="@drawable/ic_add_box_black"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"
            android:title="@string/one_string"/>

        <item
            android:id="@+id/menu_description"
            android:icon="@drawable/ic_description_black"
            android:orderInCategory="2"
            app:showAsAction="ifRoom"
            android:title="@string/two_string"/>

        <item
            android:id="@+id/menu_developer"
            android:icon="@drawable/ic_face_black"
            android:orderInCategory="3"
            app:showAsAction="ifRoom"
            android:title="@string/three_string"/>

    </group>
</menu>




