<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNameOfMenue"
            android:hint="@string/txtNameOfMenue"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:gravity="start"
            android:layout_gravity="top" />

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEk"
        android:id="@+id/txtZutaten"
        android:gravity="center"
        android:textSize="25sp" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Table Row 1 -->
        <TableRow
            android:layout_marginTop="15dp">

            <TextView
                android:layout_marginStart="5dp"
                android:hint="@string/txtNameOfZutat"
                android:width="300dp"
                android:textColor="#180000"
                android:textSize="20sp"
                android:id="@+id/txtNameOfZutat" />

            <CheckBox
                android:id="@+id/chkExisting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#3333FF"
                android:layout_column="1" />

        </TableRow>

    </TableLayout>


</LinearLayout>