<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:clickable="false"
    android:focusable="true"
    android:background="@drawable/wood"
    android:id="@+id/mainlayout">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/photo"
            android:src="@mipmap/logo_launcher_icon"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_text"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textIsSelectable="true"
            android:textSize="10dp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <!-- Button zum Speichern der Notiz auf dem Geraet -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/containerButton"
        tools:ignore="MergeRootFrame">

        <Button
            android:id="@+id/cmdAddMenue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:focusable="true"
            android:text="@string/cmdAddMenue"
            android:textColor="#000000"
            android:clickable="true"
            android:onClick="weiterAddMenue"
            android:drawableStart="@drawable/ic_add_box_black_24dp"/>

        <Button
            android:id="@+id/cmdShowAllMenues"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:focusable="true"
            android:text="@string/cmdShowAllMenue"
            android:textColor="#000000"
            android:clickable="true"
            android:onClick="weiterShowAllMenues"
            android:drawableStart="@drawable/ic_view_list_black_24dp"/>

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout" >

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txtSlogan"
            android:id="@+id/slogan"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29" />

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29" />


</LinearLayout>



